Height bug on smaller screens corrected. Robolucha added to Games section.

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body
 	color:#E8E8E8;
 	font-family: monospace;
 	margin: 0;
+	padding-bottom: 50px;
 }
 
 .start
